--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - 5432:5432
     volumes:
       - ./db:/var/lib/postgresql/data
+    user: "${UID}:${GID}"
     environment:
       POSTGRES_USER: root
       POSTGRES_DB: minibank
