--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,4 @@ uvicorn==0.11.7
 uvloop==0.14.0
 websockets==8.1
 zipp==3.1.0
+featuretoggles @ git+https://github.com/uelei/feature-toggles.git@develop
